Improve mail template. Add HolidayService with pre-defined holidays. Revise Session and ReservationService. Add new Errors and DTOs.