@@ -1,5 +1,7 @@
 package com.sp.SwimmingPool.service;
 
+import com.sp.SwimmingPool.exception.EntityNotFoundException;
+import com.sp.SwimmingPool.exception.InvalidOperationException;
 import com.sp.SwimmingPool.model.entity.MemberPackage;
 import com.sp.SwimmingPool.model.entity.PackageType;
 import com.sp.SwimmingPool.model.entity.Reservation;
@@ -10,219 +12,277 @@ import com.sp.SwimmingPool.repos.MemberPackageRepository;
 import com.sp.SwimmingPool.repos.PackageTypeRepository;
 import com.sp.SwimmingPool.repos.ReservationRepository;
 import com.sp.SwimmingPool.repos.SessionRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Lazy;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+@Slf4j
 @Service
+@RequiredArgsConstructor
 public class ReservationService {
 
     private final SessionRepository sessionRepository;
     private final ReservationRepository reservationRepository;
     private final MemberPackageRepository memberPackageRepository;
     private final PackageTypeRepository packageTypeRepository;
-    private final SessionService sessionService;
     private final MemberService memberService;
 
-    @Autowired
-    public ReservationService(
-            SessionRepository sessionRepository,
-            ReservationRepository reservationRepository,
-            MemberPackageRepository memberPackageRepository,
-            PackageTypeRepository packageTypeRepository,
-            @Lazy SessionService sessionService,
-            MemberService memberService) {
-        this.sessionRepository = sessionRepository;
-        this.reservationRepository = reservationRepository;
-        this.memberPackageRepository = memberPackageRepository;
-        this.packageTypeRepository = packageTypeRepository;
-        this.sessionService = sessionService;
-        this.memberService = memberService;
-    }
-
+    @Transactional(readOnly = true)
     public List<Reservation> getReservationsByMember(int memberId) {
         return reservationRepository.findByMemberId(memberId);
     }
 
+    @Transactional(readOnly = true)
     public List<Reservation> getActiveReservationsByMember(int memberId) {
-        return reservationRepository.findByMemberIdAndStatus(memberId, ReservationStatusEnum.CONFIRMED);
+        return reservationRepository.findByMemberIdAndStatus(
+                memberId,
+                ReservationStatusEnum.CONFIRMED
+        );
     }
 
     @Transactional
-    public Reservation createReservation(int memberId, int sessionId, int memberPackageId) throws Exception {
-        // 1. Get the session
-        Optional<Session> sessionOpt = sessionRepository.findById(sessionId);
-        if (sessionOpt.isEmpty()) {
-            throw new Exception("Session not found");
+    public Reservation createReservation(
+            int authenticatedMemberId,
+            int sessionId,
+            int memberPackageId
+    ) {
+        LocalDateTime now = LocalDateTime.now();
+
+        Session session = sessionRepository
+                .findById(sessionId)
+                .orElseThrow(() ->
+                        new EntityNotFoundException(sessionId + " ID'li seans bulunamadı.")
+                );
+
+        // 1. Booking window: only allow booking for sessions within the next 72 hours
+        LocalDateTime sessionStartDateTime = LocalDateTime.of(
+                session.getSessionDate(),
+                session.getStartTime()
+        );
+        if (sessionStartDateTime.isAfter(now.plusHours(72))) {
+            throw new InvalidOperationException("Sadece önümüzdeki 72 saat için seans rezervasyonu yapabilirsiniz.");
+        }
+        if (sessionStartDateTime.isBefore(now)) {
+            throw new InvalidOperationException("Geçmişteki bir seans için rezervasyon yapamazsınız.");
         }
 
-        Session session = sessionOpt.get();
-
-        // 2. Verify session is not full
         if (session.getCurrentBookings() >= session.getCapacity()) {
-            throw new Exception("Session is already full");
+            throw new InvalidOperationException("Seans dolu.");
         }
 
-        // 3. Verify member has a valid package
-        Optional<MemberPackage> memberPackageOpt = memberPackageRepository.findById(memberPackageId);
-        if (memberPackageOpt.isEmpty()) {
-            throw new Exception("Member package not found");
+        MemberPackage memberPackage = memberPackageRepository
+                .findById(memberPackageId)
+                .orElseThrow(() ->
+                        new EntityNotFoundException(
+                                memberPackageId + " ID'li pakete sahip üye bulunamadı."
+                        )
+                );
+        if (memberPackage.getMemberId() != authenticatedMemberId) {
+            throw new InvalidOperationException("Sadece kendi paketinizi kullanabilirsiniz.");
         }
-
-        MemberPackage memberPackage = memberPackageOpt.get();
-
-        if (!memberPackage.isActive() || memberPackage.getSessionsRemaining() <= 0) {
-            throw new Exception("No remaining sessions in package");
+        if (!memberPackage.isActive()) {
+            throw new InvalidOperationException("Üye paketiniz aktif değil.");
         }
-
+        if (memberPackage.getSessionsRemaining() <= 0) {
+            throw new InvalidOperationException("Seans hakkınız kalmadı.");
+        }
         if (memberPackage.getPaymentStatus() != MemberPackagePaymentStatusEnum.COMPLETED) {
-            throw new Exception("Package payment has not been completed");
+            throw new InvalidOperationException("Paketinizin ödemesi henüz tamamlanmamış. Rezervasyon yapamazsınız.");
         }
-
-        // Check if package is restricted to a specific pool
         if (memberPackage.getPoolId() > 0 && memberPackage.getPoolId() != session.getPoolId()) {
-            throw new Exception("This package can only be used at the specified pool");
+            throw new InvalidOperationException("Üyeliğiniz bu havuz için geçerli değil.");
         }
 
-        // 4. Verify package type matches session type
-        Optional<PackageType> packageTypeOpt = packageTypeRepository.findById(memberPackage.getPackageTypeId());
-        if (packageTypeOpt.isEmpty()) {
-            throw new Exception("Package type not found");
+        PackageType packageType = packageTypeRepository
+                .findById(memberPackage.getPackageTypeId())
+                .orElseThrow(() ->
+                        new EntityNotFoundException(
+                                memberPackage.getPackageTypeId() + " ID'sine ait üyelik paketi bulunamadı."
+                        )
+                );
+
+        LocalTime packageStartTime = packageType.getStartTime();
+        LocalTime packageEndTime = packageType.getEndTime();
+        LocalTime effectivePackageEndTime = packageEndTime.equals(LocalTime.MIDNIGHT)
+                ? LocalTime.MAX
+                : packageEndTime;
+
+        if (
+                session.getStartTime().isBefore(packageStartTime) ||
+                        session.getEndTime().isAfter(effectivePackageEndTime)
+        ) {
+            throw new InvalidOperationException(
+                    "Bu seans (" + session.getStartTime() + "-" + session.getEndTime() +
+                            ") sizin üyelik paketinizde bulunan seans saatleri (" +
+                            packageStartTime + " - " + effectivePackageEndTime + ") içerisinde değil, bu saatler için rezervasyon yapamazsınız."
+            );
         }
 
-        PackageType packageType = packageTypeOpt.get();
-
-        // Check if session time is within package allowed times
-        if (session.getStartTime().isBefore(packageType.getStartTime()) ||
-                session.getEndTime().isAfter(packageType.getEndTime())) {
-            throw new Exception("This session is outside the allowed time for your package");
+        if (
+                packageType.isEducationPackage() && !session.isEducationSession()
+        ) {
+            throw new InvalidOperationException(
+                    "Bu seans bir eğitim seansı değil."
+            );
         }
 
-        // Check if education requirement matches
-        if (packageType.isEducationPackage() && !session.isEducationSession()) {
-            throw new Exception("This session is not an education session required by your package");
-        }
-
-        // Check if swimming ability is required but member doesn't have it
         if (packageType.isRequiresSwimmingAbility()) {
-            if (!memberService.hasSwimmingAbility(memberId)) {
-                throw new Exception("This package requires swimming ability verification");
+            try {
+                if (!memberService.hasSwimmingAbility(authenticatedMemberId)) {
+                    throw new InvalidOperationException(
+                            "Bu seansa rezervasyon yapabilmeniz için yüzme bilmeniz gerekiyor."
+                    );
+                }
+            } catch (Exception e) {
+                throw new RuntimeException(
+                        "Yüzme bilgisi doğrulanamadı: " + e.getMessage(),
+                        e
+                );
             }
         }
 
-        // 5. Verify booking time rule (72 hours before session)
-        LocalDateTime sessionStart = LocalDateTime.of(session.getSessionDate(), session.getStartTime());
-        LocalDateTime currentTime = LocalDateTime.now();
-        LocalDateTime bookingDeadline = sessionStart.minusHours(72);
-
-        if (currentTime.isBefore(bookingDeadline)) {
-            throw new Exception("Sessions can only be reserved within 72 hours of the session time");
+        if (hasConflictingReservation(authenticatedMemberId, session)) {
+            throw new InvalidOperationException("Bu saatler arasında başka bir rezervasyon yapılmış.");
         }
 
-        // 6. Check for conflicting reservations
-        if (hasConflictingReservation(memberId, session)) {
-            throw new Exception("Member already has a reservation at this time");
-        }
-
-        // 7. Check if member already has this session reserved
+        // 6. Check if member already has this specific session reserved
         Optional<Reservation> existingReservation =
-                reservationRepository.findByMemberIdAndSessionId(memberId, sessionId);
-        if (existingReservation.isPresent()) {
-            throw new Exception("Member already has a reservation for this session");
+                reservationRepository.findByMemberIdAndSessionId(authenticatedMemberId, sessionId);
+        if (existingReservation.isPresent() && existingReservation.get().getStatus() == ReservationStatusEnum.CONFIRMED) {
+            throw new InvalidOperationException("Bu seansa halihazırda rezervasyonunuz bulunmaktadır.");
         }
 
-        // 8. Create the reservation
-        Reservation reservation = new Reservation();
-        reservation.setMemberId(memberId);
-        reservation.setSessionId(sessionId);
-        reservation.setMemberPackageId(memberPackageId);
-        reservation.setStatus(ReservationStatusEnum.CONFIRMED);
-        reservation.setCreatedAt(LocalDateTime.now());
-        reservation.setUpdatedAt(LocalDateTime.now());
+        // 7. Increment session booking count
+        session.setCurrentBookings(session.getCurrentBookings() + 1);
+        session.setUpdatedAt(now);
+        sessionRepository.save(session);
 
-        // 9. Update session booking count
-        sessionService.incrementSessionBookings(sessionId);
-
-        // 10. Decrement remaining sessions in package
+        // 8. Decrement remaining sessions in package
         memberPackage.setSessionsRemaining(memberPackage.getSessionsRemaining() - 1);
         memberPackageRepository.save(memberPackage);
 
-        // 11. Save and return the reservation
+        // 9. Create and save the reservation
+        Reservation reservation = new Reservation();
+        reservation.setMemberId(authenticatedMemberId);
+        reservation.setSessionId(sessionId);
+        reservation.setMemberPackageId(memberPackageId);
+        reservation.setStatus(ReservationStatusEnum.CONFIRMED);
+        reservation.setCreatedAt(now);
+        reservation.setUpdatedAt(now);
         return reservationRepository.save(reservation);
     }
 
     @Transactional
-    public void cancelReservation(int reservationId) throws Exception {
-        Optional<Reservation> reservationOpt = reservationRepository.findById(reservationId);
-        if (reservationOpt.isEmpty()) {
-            throw new Exception("Reservation not found");
+    public void cancelReservation(int reservationId, int authenticatedMemberId) {
+        LocalDateTime now = LocalDateTime.now();
+
+        Reservation reservation = reservationRepository
+                .findById(reservationId)
+                .orElseThrow(() ->
+                        new EntityNotFoundException(
+                                "Reservation not found with ID: " + reservationId
+                        )
+                );
+
+        if (reservation.getMemberId() != authenticatedMemberId) {
+            throw new InvalidOperationException("Sadece kendinize ait rezervasyonu iptal edebilirsiniz.");
         }
 
-        Reservation reservation = reservationOpt.get();
-
-        // Only confirmed reservations can be canceled
         if (reservation.getStatus() != ReservationStatusEnum.CONFIRMED) {
-            throw new Exception("Only confirmed reservations can be canceled");
+            throw new InvalidOperationException(
+                    "Sadece onaylanmış rezervasyonlar iptal edilebilir. Güncel statü: " +
+                            reservation.getStatus()
+            );
         }
 
-        // Check if cancellation is within allowed time (3 hours before session)
-        Optional<Session> sessionOpt = sessionRepository.findById(reservation.getSessionId());
-        if (sessionOpt.isEmpty()) {
-            throw new Exception("Session not found");
-        }
+        Session session = sessionRepository
+                .findById(reservation.getSessionId())
+                .orElseThrow(() ->
+                        new EntityNotFoundException(
+                                "Rezervasyonun ait olduğu seans bulunamadı. (Seans ID: " +
+                                        reservation.getSessionId() +
+                                        ", Rezervasyon ID: " +
+                                        reservationId + ")."
+                        )
+                );
 
-        Session session = sessionOpt.get();
-
-        LocalDateTime sessionStart = LocalDateTime.of(session.getSessionDate(), session.getStartTime());
+        LocalDateTime sessionStart = LocalDateTime.of(
+                session.getSessionDate(),
+                session.getStartTime()
+        );
         LocalDateTime cancellationDeadline = sessionStart.minusHours(3);
-
-        if (LocalDateTime.now().isAfter(cancellationDeadline)) {
-            throw new Exception("Reservations must be canceled at least 3 hours before session time");
+        if (now.isAfter(cancellationDeadline)) {
+            throw new InvalidOperationException(
+                    "Rezervasyonunuzu sadece 3 saat öncesine kadar iptal edebilirsiniz. Son iptal saati: " +
+                            cancellationDeadline
+            );
         }
 
-        // Update reservation status
-        reservation.setStatus(ReservationStatusEnum.CANCELLED);
-        reservation.setUpdatedAt(LocalDateTime.now());
-        reservationRepository.save(reservation);
-
-        // Update session booking count
-        sessionService.decrementSessionBookings(reservation.getSessionId());
+        // Decrement session booking count
+        if (session.getCurrentBookings() > 0) {
+            session.setCurrentBookings(session.getCurrentBookings() - 1);
+            session.setUpdatedAt(now);
+            sessionRepository.save(session);
+        } else {
+            log.warn(
+                    "Attempted to decrement bookings for session {} during cancellation of reservation {}, but current bookings were already 0.",
+                    session.getId(),
+                    reservationId
+            );
+        }
 
         // Return session to package
-        Optional<MemberPackage> memberPackageOpt = memberPackageRepository.findById(reservation.getMemberPackageId());
-        if (memberPackageOpt.isEmpty()) {
-            throw new Exception("Member package not found");
-        }
-
-        MemberPackage memberPackage = memberPackageOpt.get();
-
+        MemberPackage memberPackage = memberPackageRepository
+                .findById(reservation.getMemberPackageId())
+                .orElseThrow(() ->
+                        new EntityNotFoundException(
+                                "Rezervasyona ait üye paketi bulunamadı (Üye paketi ID: " +
+                                        reservation.getMemberPackageId() +
+                                        ", Rezervasyon ID: " +
+                                        reservationId + ")."
+                        )
+                );
         memberPackage.setSessionsRemaining(memberPackage.getSessionsRemaining() + 1);
         memberPackageRepository.save(memberPackage);
+
+        reservation.setStatus(ReservationStatusEnum.CANCELLED);
+        reservation.setUpdatedAt(now);
+        reservationRepository.save(reservation);
     }
 
-    public boolean hasConflictingReservation(int memberId, Session newSession) throws Exception {
-        List<Reservation> activeReservations = reservationRepository
-                .findByMemberIdAndStatus(memberId, ReservationStatusEnum.CONFIRMED);
+    @Transactional(readOnly = true)
+    public boolean hasConflictingReservation(int memberId, Session newSession) {
+        List<Reservation> activeReservations = getActiveReservationsByMember(memberId);
 
         for (Reservation reservation : activeReservations) {
-            Optional<Session> existingSessionOpt = sessionRepository.findById(reservation.getSessionId());
+            if (reservation.getSessionId() == newSession.getId()) {
+                continue;
+            }
+
+            Optional<Session> existingSessionOpt = sessionRepository.findById(
+                    reservation.getSessionId()
+            );
 
             if (existingSessionOpt.isPresent()) {
                 Session existingSession = existingSessionOpt.get();
 
                 // Check if sessions are on the same date
-                if (existingSession.getSessionDate().equals(newSession.getSessionDate())) {
-                    // Check for time overlap
-                    boolean startsBeforeEnds = existingSession.getStartTime().isBefore(newSession.getEndTime());
-                    boolean endsAfterStarts = existingSession.getEndTime().isAfter(newSession.getStartTime());
+                if (
+                        existingSession.getSessionDate().equals(newSession.getSessionDate())
+                ) {
+                    // Check for time overlap: (StartA < EndB) and (EndA > StartB)
+                    boolean startsBeforeEnds = existingSession
+                            .getStartTime()
+                            .isBefore(newSession.getEndTime());
+                    boolean endsAfterStarts = existingSession
+                            .getEndTime()
+                            .isAfter(newSession.getStartTime());
 
                     if (startsBeforeEnds && endsAfterStarts) {
                         return true; // Conflict found
@@ -230,21 +290,24 @@ public class ReservationService {
                 }
             }
         }
-
-        return false;
+        return false; // No conflicts found
     }
 
     @Transactional
-    public void markReservationAsCompleted(int reservationId) throws Exception {
-        Optional<Reservation> reservationOpt = reservationRepository.findById(reservationId);
-        if (reservationOpt.isEmpty()) {
-            throw new Exception("Reservation not found");
-        }
-
-        Reservation reservation = reservationOpt.get();
+    public void markReservationAsCompleted(int reservationId) {
+        Reservation reservation = reservationRepository
+                .findById(reservationId)
+                .orElseThrow(() ->
+                        new EntityNotFoundException(
+                                "Rezervasyon bulunamadı! ID: " + reservationId
+                        )
+                );
 
         if (reservation.getStatus() != ReservationStatusEnum.CONFIRMED) {
-            throw new Exception("Only confirmed reservations can be marked as completed");
+            throw new InvalidOperationException(
+                    "Sadece onaylanmış statüdeki rezervasyonlar tamamlandı olarak işaretlenebilir. Güncel statü: " +
+                            reservation.getStatus()
+            );
         }
 
         reservation.setStatus(ReservationStatusEnum.COMPLETED);
@@ -253,16 +316,20 @@ public class ReservationService {
     }
 
     @Transactional
-    public void markReservationAsNoShow(int reservationId) throws Exception {
-        Optional<Reservation> reservationOpt = reservationRepository.findById(reservationId);
-        if (reservationOpt.isEmpty()) {
-            throw new Exception("Reservation not found");
-        }
-
-        Reservation reservation = reservationOpt.get();
+    public void markReservationAsNoShow(int reservationId) {
+        Reservation reservation = reservationRepository
+                .findById(reservationId)
+                .orElseThrow(() ->
+                        new EntityNotFoundException(
+                                "Rezervasyon bulunamadı! ID: " + reservationId
+                        )
+                );
 
         if (reservation.getStatus() != ReservationStatusEnum.CONFIRMED) {
-            throw new Exception("Only confirmed reservations can be marked as no-show");
+            throw new InvalidOperationException(
+                    "Sadece onaylanmış statüdeki rezervasyonlar gelinmedi olarak işaretlenebilir. Güncel statü: " +
+                            reservation.getStatus()
+            );
         }
 
         reservation.setStatus(ReservationStatusEnum.NO_SHOW);
@@ -275,19 +342,35 @@ public class ReservationService {
         LocalDateTime now = LocalDateTime.now();
         LocalDate currentDate = now.toLocalDate();
         LocalTime currentTime = now.toLocalTime();
-        List<ReservationStatusEnum> activeStatuses = Arrays.asList(ReservationStatusEnum.CONFIRMED);
+        List<ReservationStatusEnum> activeStatuses = List.of(
+                ReservationStatusEnum.CONFIRMED
+        );
 
-        List<Reservation> expiredReservations = reservationRepository.findExpiredReservations(
-                activeStatuses, currentDate, currentTime);
+        // Find reservations where status is CONFIRMED and session end time is in the past
+        List<Reservation> expiredReservations =
+                reservationRepository.findExpiredReservations(
+                        activeStatuses,
+                        currentDate,
+                        currentTime
+                );
 
+        int processedCount = 0;
         for (Reservation reservation : expiredReservations) {
             try {
-                reservation.setStatus(ReservationStatusEnum.NO_SHOW);
-                reservation.setUpdatedAt(now);
-                reservationRepository.save(reservation);
+                // Double check status just in case
+                if (reservation.getStatus() == ReservationStatusEnum.CONFIRMED) {
+                    reservation.setStatus(ReservationStatusEnum.NO_SHOW);
+                    reservation.setUpdatedAt(now);
+                    reservationRepository.save(reservation);
+                    processedCount++;
+                }
             } catch (Exception e) {
-                System.err.println("Error processing reservation ID " + reservation.getId() + ": " + e.getMessage());
+                // Log error and continue with the next one
+                log.warn("Error processing missed reservation ID {}: {}", reservation.getId(), e.getMessage());
             }
+        }
+        if (processedCount > 0) {
+            log.info("Processed {} missed reservations as NO_SHOW.", processedCount);
         }
     }
 }
